--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,5 +33,7 @@
 // ОК - вопрос по формуле и почему выходит
 @import './mobile-first/clients-section';
 
-// Модальное окно готово для 3х
+@import './mobile-first/portfolio';
+
+// Модальное окно - ОК (вопрос по тексту)
 @import './mobile-first/modal-window';
