--- a/sass/mobile-first/_hero-section.scss
+++ b/sass/mobile-first/_hero-section.scss
@@ -1,9 +1,20 @@
 // /* hero and main*/
 .hero-section {
     text-align: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-color: #2f303a;
+       background-color: #2f303a;
+
+    @media screen and (min-width: $mobile) and (max-width: 1199px) {
+        padding-top: 118px;
+        padding-bottom: 118px;
+
+    }
+
+    @media screen and (min-width: $desktop) {
+        padding-top: 200px;
+        padding-bottom: 200px;
+
+    }
+        
 }
 
 // /* фон героя */
@@ -21,13 +32,23 @@
 
 .hero-section__title {
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
+        letter-spacing: 0.06em;
     text-transform: $textUpp;
     color: $primaryColor;
 
     margin-bottom: 30px;
+
+    @media screen and (min-width: $mobile) and (max-width: 1199px) {
+                font-size: 26px;
+                line-height: 1.61;
+    
+        }
+    
+        @media screen and (min-width: $desktop) {
+                font-size: 44px;
+                line-height: 1.36;
+    
+        }
 }
 
 .hero-section__button {
