--- a/sass/mobile-first/_logo.scss
+++ b/sass/mobile-first/_logo.scss
@@ -21,8 +21,17 @@
 }
 
 .header__logo {
-    // для десктоп, возможно для планшета
-    // margin-right: 93px;
+
+    @media screen and (min-width: $tablet) {
+    
+            margin-right: 88px;
+        }
+
+@media screen and (min-width: $desktop) {
+
+        margin-right: 93px;
+    }
+   
 }
 
 
