--- a/sass/mobile-first/_activity-section.scss
+++ b/sass/mobile-first/_activity-section.scss
@@ -2,7 +2,7 @@
     padding-top: 94px;
     padding-bottom: 94px;
 
-    @media screen and (max-width:$desktop) {
+    @media screen and (max-width: 1199px) {
 display: none
     }
 }
