--- a/sass/mobile-first/_modal-window.scss
+++ b/sass/mobile-first/_modal-window.scss
@@ -34,7 +34,7 @@
         transform: translate(-50%, -50%) scale(1);
     transition: transform 500ms ease-in-out;
 
-    @media screen and (max-width: $desktop)
+    @media screen and (max-width: 1199px)
     {
         
         max-width: 450px;
