--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,10 @@ img {
   display: none;
 }
 
+.header__button:hover, .header__button:focus {
+  fill: #2196f3;
+}
+
 @media screen and (min-width: 768px) {
   .header__button {
     display: none;
@@ -131,19 +135,104 @@ img {
   display: none;
 }
 
-.header__container {
+.mobile-menu {
   display: none;
   position: absolute;
   top: 100%;
   left: 0;
   width: 100%;
-  height: 300px;
+  height: 796px;
+  padding: 40px;
   background-color: #f3ea81;
-  padding: 20px 20px;
 }
 
-.header__container.is-open {
-  display: block;
+.mobile-menu.is-open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu.is-open {
+    display: none;
+  }
+}
+
+.mobile-menu__nav-item {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__nav-item:last-child {
+  margin-bottom: 0;
+}
+
+.mobile-menu__nav-link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #212121;
+}
+
+.mobile-menu__nav-link--current {
+  color: #2196f3;
+}
+
+.mobile-menu__contacts {
+  margin-top: auto;
+  margin-bottom: 64px;
+}
+
+.mobile-menu__contacts-item {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__contacts-item:last-child {
+  margin-bottom: 0;
+}
+
+.mobile-menu__tel-link {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #2196f3;
+}
+
+.mobile-menu__mail-link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #757575;
+}
+
+.mobile-menu__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mobile-menu__socials-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #2196f3;
+}
+
+.mobile-menu__socials-link-devider {
+  margin-right: 10px;
+  margin-left: 6px;
 }
 
 .header__nav-list {
