--- a/sass/mobile-first/_header.scss
+++ b/sass/mobile-first/_header.scss
@@ -24,6 +24,11 @@ background-color: transparent;
       display: none;
   }
 
+  &:hover,
+  &:focus {
+      fill: $accentColor;
+  }
+
   @media screen and (min-width: $tablet) {
 
     display: none;
@@ -39,21 +44,103 @@ background-color: transparent;
 }
 
 
-
-.header__container{
+// mobile menu
+.mobile-menu{
     display: none;
     position: absolute;
     top: 100%;
     left: 0;
     width: 100%;
-    height: 300px;
+    height: 796px;
 
+    padding: 40px;
     background-color: rgb(243, 234, 129);
-    padding: 20px 20px;
+    
 
     &.is-open{
-display: block;
+display: flex;
+flex-direction: column;
+
+@media screen and (min-width: $tablet) {
+
+        display: none;
     }
+    }
+}
+
+.mobile-menu__nav-item{
+    margin-bottom: 32px;
+    &:last-child {
+            margin-bottom: 0;
+        }
+}
+
+
+.mobile-menu__nav-link{
+
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: $secondaryColor;
+
+    &--current{
+        color: $accentColor;
+    }
+}
+
+.mobile-menu__contacts {
+    margin-top: auto;
+    margin-bottom: 64px;
+}
+
+.mobile-menu__contacts-item{
+margin-bottom: 32px;
+&:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.mobile-menu__tel-link{
+
+  
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18;
+    
+    letter-spacing: 0.02em;
+text-decoration: none;
+    color: $accentColor;
+}
+
+.mobile-menu__mail-link{
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+text-decoration: none;
+    color: #757575;
+}
+
+.mobile-menu__socials{
+    display: flex;
+}
+
+.mobile-menu__socials-link{
+         font-weight: 500;
+        font-size: 18px;
+        line-height: 1.22;
+            
+        letter-spacing: 0.02em;
+    text-decoration: none;
+        color: $accentColor;
+}
+
+.mobile-menu__socials-link-devider{
+    margin-right: 10px;
+    margin-left: 6px;
 }
 
 // навигация для tablet и desktop
