--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,7 +33,9 @@
 // ОК - вопрос по формуле и почему выходит
 @import './mobile-first/clients-section';
 
-@import './mobile-first/portfolio';
+@import './mobile-first/footer';
 
 // Модальное окно - ОК (вопрос по тексту)
 @import './mobile-first/modal-window';
+
+@import './mobile-first/portfolio';
