--- a/sass/mobile-first/_clients-section.scss
+++ b/sass/mobile-first/_clients-section.scss
@@ -45,7 +45,7 @@
 height: 92px;
 
 @media screen and (min-width: $mobile) and (max-width: 767px) {
-    width: calc((100% - 4 * 15px) / 2);
+    flex-basis: calc((100% - 4 * 15px) / 2);
         margin: 15px;
 
 // width: 210px;
@@ -53,7 +53,7 @@ height: 92px;
     }
 
     @media screen and (min-width: $tablet) and (max-width: 1199px) {
-        width: calc((100% - 6 * 15px) / 3);
+        flex-basis: calc((100% - 6 * 15px) / 3);
         margin: 15px;
 
         // width: 226px; 
