--- a/sass/mobile-first/_portfolio.scss
+++ b/sass/mobile-first/_portfolio.scss
@@ -121,7 +121,7 @@
 .portfolio-content__item {
 
     @media screen and (min-width: $tablet) and (max-width: 1199px) {
-        width: calc((100% - 4 * 15px) / 2);
+        flex-basis: calc((100% - 4 * 15px) / 2);
             margin: 15px;
     }
 
