--- a/sass/mobile-first/_hero-section.scss
+++ b/sass/mobile-first/_hero-section.scss
@@ -23,11 +23,50 @@
     max-height: 600px;
     margin-left: auto;
     margin-right: auto;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/background-header/Img-1.jpg);
+
     background-position: center;
-    background-repeat: repeat, no-repeat;
-    background-size: cover;
+        background-repeat: repeat, no-repeat;
+        background-size: cover;
+
+    background-image: 
+        linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/mobile-first/hero-background/optimized/hero_sm-min.jpg);
+
+        @media (min-device-pixel-ratio: 2),
+                        (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image:
+                linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                    url(../images/mobile-first/hero-background/optimized/hero_sm@2x-min.jpg);
+            }
+
+        @media screen and (min-width: $tablet)  {
+            background-image:
+        linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url(../images/mobile-first/hero-background/optimized/hero_md-min.jpg);
+                
+            @media (min-device-pixel-ratio: 2),
+                (min-resolution: 192dpi),
+                (min-resolution: 2dppx) {
+                    background-image:
+                        linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                        url(../images/mobile-first/hero-background/optimized/hero_md@2x-min.jpg);
+                }
+            }
+        
+            @media screen and (min-width: $desktop) {
+            background-image:
+                    linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                    url(../images/mobile-first/hero-background/optimized/hero_lg-min.jpg);
+                
+                    @media (min-device-pixel-ratio: 2),
+                        (min-resolution: 192dpi),
+                        (min-resolution: 2dppx) {
+                            background-image:
+                                linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                                url(../images/mobile-first/hero-background/optimized/hero_lg@2x-min.jpg);
+                        }
+            }
 }
 
 .hero-section__title {
