--- a/sass/mobile-first/_header.scss
+++ b/sass/mobile-first/_header.scss
@@ -20,9 +20,9 @@ border: none;
 background-color: transparent;
 
 
-  &--cross {
-      display: none;
-  }
+//   &--cross {
+//       display: none;
+//   }
 
   &:hover,
   &:focus {
@@ -35,38 +35,68 @@ background-color: transparent;
   }
 }
 
-.header__button.is-open .header__button--cross{
-    display: block;
-}
+// .header__button.is-open .header__button--cross{
+//     display: block;
+// }
 
-.header__button.is-open .header__button--menu{
-    display: none;
-}
+// .header__button.is-open .header__button--menu{
+//     display: none;
+// }
+
 
 
 // mobile menu
 .mobile-menu{
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 796px;
+    position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        padding: 32px;
+        background-color: $primaryColor;
+        z-index: 999;
+    
+        transform: translateX(100%);
+        transition: transform 250ms ease-in-out;
 
-    padding: 40px;
-    background-color: rgb(243, 234, 129);
+            &.is-open {
+                    display: flex;
+                    flex-direction: column;
+            
+                    @media screen and (min-width: $tablet) {
+            
+                        display: none;
+                    }
+                }
+    }
+    
+    .mobile-menu.is-open {
+        transform: translateX(0);
+
+        // &.header__button--cross {
+        //             display: block;
+        //         }
+    }
+.mobile-menu .header__button {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    color: #fff;
+}
+//     display: none;
+//     position: absolute;
+//     top: 100%;
+//     left: 0;
+//     width: 100%;
+//     height: 796px;
+
+//     padding: 40px;
+//     background-color: rgb(243, 234, 129);
     
 
-    &.is-open{
-display: flex;
-flex-direction: column;
 
-@media screen and (min-width: $tablet) {
 
-        display: none;
-    }
-    }
-}
+
 
 .mobile-menu__nav-item{
     margin-bottom: 32px;
