--- a/css/main.css
+++ b/css/main.css
@@ -560,6 +560,12 @@ img {
   padding-top: 60px;
 }
 
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .benefits-section {
+    padding-bottom: 60px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .benefits-section {
     padding-top: 94px;
@@ -584,9 +590,13 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .benefits-section__item {
     width: 450px;
+    margin-bottom: 30px;
+  }
+  .benefits-section__item:last-child {
+    margin-bottom: 0px;
   }
 }
 
@@ -747,6 +757,10 @@ img {
 @media screen and (min-width: 480px) {
   .team-section__item {
     width: 450px;
+    margin-bottom: 30px;
+  }
+  .team-section__item:last-child {
+    margin-bottom: 0px;
   }
 }
 
@@ -1017,11 +1031,6 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .footer-info {
     margin-bottom: 60px;
   }
 }
@@ -1034,12 +1043,6 @@ img {
 
 .footer-contacts {
   font-style: normal;
-}
-
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .footer-contacts {
-    margin-bottom: 60px;
-  }
 }
 
 @media screen and (min-width: 480px) and (max-width: 1199px) {
@@ -1657,6 +1660,15 @@ img {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .portfolio-content__item {
+    margin-bottom: 30px;
+  }
+  .portfolio-content__item:last-child {
+    margin-bottom: 0px;
   }
 }
 
