--- a/sass/mobile-first/_portfolio.scss
+++ b/sass/mobile-first/_portfolio.scss
@@ -119,6 +119,15 @@
 }
 
 .portfolio-content__item {
+    @media screen and (min-width: $mobile) and (max-width: 767px) {
+
+        margin-bottom: 30px;
+        
+            &:last-child {
+                margin-bottom: 0px;
+            }
+    }
+
 
     @media screen and (min-width: $tablet) and (max-width: 1199px) {
         flex-basis: calc((100% - 4 * 15px) / 2);
