--- a/sass/mobile-first/_team-section.scss
+++ b/sass/mobile-first/_team-section.scss
@@ -44,6 +44,10 @@
 
     @media screen and (min-width: $mobile) {
             width: 450px;
+            margin-bottom: 30px;
+            &:last-child {
+                    margin-bottom: 0px;
+                }
         }
     
         @media screen and (min-width: $tablet) and (max-width: 1199px) {
