--- a/css/main.css
+++ b/css/main.css
@@ -228,6 +228,17 @@ img {
   display: flex;
 }
 
+.mobile-menu__socials-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 10px;
+}
+
+.mobile-menu__socials-item:last-child {
+  margin-right: 0px;
+}
+
 .mobile-menu__socials-link {
   font-weight: 500;
   font-size: 18px;
@@ -237,10 +248,12 @@ img {
   color: #2196f3;
 }
 
-.mobile-menu__socials-link-devider {
-  margin-right: 10px;
-  margin-left: 6px;
-  color: rgba(33, 33, 33, 0.2);
+.mobile-menu__socials-item:not(:last-child) .mobile-menu__socials-link::after {
+  content: '';
+  width: 0px;
+  height: 22px;
+  margin-left: 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .header__nav-list {
