--- a/sass/mobile-first/_header.scss
+++ b/sass/mobile-first/_header.scss
@@ -131,6 +131,7 @@ margin-bottom: 32px;
 &:last-child {
         margin-bottom: 0;
     }
+         
 }
 
 .mobile-menu__tel-link{
@@ -158,6 +159,15 @@ text-decoration: none;
     display: flex;
 }
 
+.mobile-menu__socials-item{
+    display: flex;
+    margin-right: 10px;
+    &:last-child{
+    margin-right: 0px
+    }
+    
+    
+}
 .mobile-menu__socials-link{
          font-weight: 500;
         font-size: 18px;
@@ -166,13 +176,30 @@ text-decoration: none;
         letter-spacing: 0.02em;
     text-decoration: none;
         color: $accentColor;
+
+    // &::after {
+    //         content: '';
+    
+    //         width: 0px;
+    //         height: 22px;
+    //         // background-color: red;
+    //         margin-left: 10px;
+    //         border: 1px solid rgba(33, 33, 33, 0.2);
+    //         // transform: rotate(90deg);
+    //     }
 }
 
-.mobile-menu__socials-link-devider{
-    margin-right: 10px;
-    margin-left: 6px;
-    color:  rgba(33, 33, 33, 0.2);
+.mobile-menu__socials-item:not(:last-child) .mobile-menu__socials-link::after{
+    content: '';
+    
+        width: 0px;
+        height: 22px;
+        // background-color: red;
+        margin-left: 10px;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        // transform: rotate(90deg);
 }
+
 
 // навигация для tablet и desktop
 .header__nav-list {
