--- a/css/main.css
+++ b/css/main.css
@@ -767,7 +767,7 @@ img {
   border-radius: 0px 0px 4px 4px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .team-section__item {
     width: 450px;
     margin-bottom: 30px;
