--- a/sass/mobile-first/_portfolio.scss
+++ b/sass/mobile-first/_portfolio.scss
@@ -172,7 +172,7 @@
     overflow: hidden;
 
     // сделал когда не загружались картинкив девтулзах
-    @media screen and (min-width: 768px){
+    @media screen and (min-width: 768px) and (max-width: 1199px){
         width: 354px;
     }
         @media screen and (min-width: 1200px) {
